[package]
name = "basics"
version = "0.1.0"
edition = "2024"
default-run = "main"

# anchor does not install all the features of the library when installing it to reduce the bundle size for the compilation time. to install your required you have specify it like the one below example
[dependencies]
borsh = { version = "1.5.7", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] } 
serde_json = "1.0.145"
